[gd_scene load_steps=5 format=3 uid="uid://s3pbm285gj1f"]

[ext_resource type="Script" path="res://Characters/hud.gd" id="1_lv8xd"]
[ext_resource type="Texture2D" uid="uid://cvuqn8bak2eh7" path="res://art/QuestMark.png" id="2_njlpg"]

[sub_resource type="ImageTexture" id="ImageTexture_a2f25"]

[sub_resource type="ImageTexture" id="ImageTexture_olt58"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_lv8xd")

[node name="Health" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
offset_right = 71.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 20
text = "Health:"

[node name="Lives" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 76.0
offset_top = 1.0
offset_right = 89.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 20
text = "3"

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.364706)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_right = 1.0
offset_bottom = 107.0
grow_horizontal = 0
texture = SubResource("ImageTexture_a2f25")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_top = 7.0
offset_right = -79.0
offset_bottom = 23.0
grow_horizontal = 0
texture = ExtResource("2_njlpg")

[node name="QuestLog" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 7.0
offset_right = 8.0
offset_bottom = 33.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 11
text = "Quest Log"

[node name="MainQuest" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -91.0
offset_top = 32.0
offset_right = -2.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7
text = "Main Quest"
autowrap_mode = 2

[node name="SideQuest" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -91.0
offset_top = 71.0
offset_right = -3.0
offset_bottom = 106.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 7
text = "Side Quest"
autowrap_mode = 2

[node name="EndBackground" type="NinePatchRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.247059)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -102.0
offset_right = 115.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_olt58")

[node name="End" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -82.0
offset_right = 87.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
text = "Thank you for playing"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = 37.0
offset_right = 61.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
